<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.visconti.llen_.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_word_list"
        android:name="com.visconti.llen_.ui.wordlist.wordList"
        android:label="@string/word_list" />

    <fragment
        android:id="@+id/nav_word_top"
        android:name="com.visconti.llen_.ui.wordtop.TopWords"
        android:label="@string/word_top"/>

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.visconti.llen_.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.visconti.llen_.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

</navigation>